--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
@@ -93,6 +94,7 @@
       "react-app"
     ],
     "plugins": [
+      "transform-decorators-legacy",
       [
         "import",
         {
@@ -105,7 +107,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy":"http://localhosy:5202",
   "devDependencies": {
-    "babel-plugin-import": "^1.7.0"
+    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5"
   }
 }
