--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-chat",
   "version": "0.1.0",
+  "description": "简易招聘学习",
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.0.1-alpha.0",
@@ -49,6 +50,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "utility": "^1.14.0",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
